# syntheticMGUH

./: .gitignore  1_build_providers.py  2_generate_data.bat  3_convert_to_parquet.py  4_sync_to_databricks.sh  CLAUDE.md  build_provider_files.py  build_synthetic_dc_population.bat  convert_to_omop.R  covid_epi_timeline.py  covid_historic_timeline.py  load_csv_to_postgres.bat  load_csv_to_rdbms.py  normalize_codes.sql  pyproject.toml  readme.md  requirements.txt  synthea.properties
OMOP/: .Rhistory  convert_omop_postgres.bat
OMOP/.Rproj.user/73523D1C/pcs/: files-pane.pper
OMOP/.Rproj.user/shared/notebooks/: paths
OMOP/ETL/SQL/: drop_cdm_tables.sql  insert_drug_exposure.sql  insert_measurement.sql  insert_observation.sql  synthea_ddl.sql
SQL/: normalize_codes.sql
deprecated/: DATABRICKS_SYNC_README.md  MIGRATION_SUMMARY.md  PARQUET_WORKFLOW.md  convert_notes_to_jsonl.py  load_notes_to_rdbms.py.deprecated  sync_to_databricks.sh  sync_to_databricks_incremental.sh  synthea.properties old.properties  test_parquet_load.py  transform_notes_with_llm.py
deprecated/databricks/: load_tables_databricks.py  load_tables_databricks.sql
scripts/: process_notes.py
scripts/templates/: template_soap.txt  voice_terse.txt  voice_verbose.txt
